Corrected some vertical shift of the pop-up menu on small screens

--- a/Seminar16_HW/style.css
+++ b/Seminar16_HW/style.css
@@ -808,6 +808,10 @@ summary::before {
       margin-right: 0;
    }
 
+   .header__menu {
+      top: 58px;
+   }
+
    .header__burger {
       margin-bottom: 0;
    }
